<resources>
    <string name="app_name">TravelInsurance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sliderimage">slider Image</string>
    <string name="signin">SignIn</string>
    <string name="register">Register</string>
    <string name="enter_email_enter_username">Enter Email / Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enable_fingerprint">Enable Fingerprint</string>
    <string name="please_username">please enter username</string>
    <string name="empty">""</string>
    <string name="please_password">please enter password</string>
    <string name="let_us_know_about_you">Let us know about you</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="msg_error_passwordnotmatch">Password is not matching</string>
    <string name="msg_error_valid_mobileNumber">Please enter valid mobile number</string>
    <string name="msg_error_password_regex">At least 8 character with 1 digital, upper,lower &amp; special char </string>
    <string name="msg_error_email_already_exist">Email Id is already exists</string>
    <string name="msg_error_username_already_exist">Username is already exist</string>
    <string name="invalid_user_password">Invalid Username Or Password</string>
</resources>