<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.spiderindia.travelinsurance.register.RegistrationViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_register_border"
            android:padding="5dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_semibold"
                android:text="@string/let_us_know_about_you"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/enter_first_name"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@drawable/bg_login_field"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorText="@{viewModel.liveUserError.firstname}"
                app:errorTextColor="#330615"
                app:layout_constraintTop_toBottomOf="@+id/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_medium"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.liveUserData.firstName}"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/enter_last_name"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@drawable/bg_login_field"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorText="@{viewModel.liveUserError.lastname}"
                app:errorTextColor="#330615"
                app:layout_constraintTop_toBottomOf="@+id/tilFirstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_medium"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.liveUserData.lastName}"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/enter_mobile"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@drawable/bg_login_field"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorText="@{viewModel.liveUserError.mobile}"
                app:errorTextColor="#330615"
                app:layout_constraintTop_toBottomOf="@+id/tilLastName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_medium"
                    android:inputType="number"
                    android:text="@={viewModel.liveUserData.mobile}"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/enter_email_address"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@drawable/bg_login_field"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorText="@{viewModel.liveUserError.email}"
                app:errorTextColor="#330615"
                app:layout_constraintTop_toBottomOf="@+id/tilMobile">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_medium"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.liveUserData.email}"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/enter_user_name"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@drawable/bg_login_field"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorText="@{viewModel.liveUserError.username}"
                app:errorTextColor="#330615"
                app:layout_constraintTop_toBottomOf="@+id/tilEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_medium"
                    android:inputType="text|number"
                    android:text="@={viewModel.liveUserData.username}"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/enter_password"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@drawable/bg_login_field"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorText="@{viewModel.liveUserError.password}"
                app:errorTextColor="#330615"
                app:layout_constraintTop_toBottomOf="@+id/tilUsername">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_medium"
                    android:inputType="textPassword"
                    android:text="@={viewModel.liveUserData.password}"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/enter_confirm_password"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@drawable/bg_login_field"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorText="@{viewModel.liveUserError.confirmpassword}"
                app:errorTextColor="#330615"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_medium"
                    android:inputType="textPassword"
                    android:text="@={viewModel.liveUserData.confirmpassword}"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/register"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>