<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="viewModel"
            type="com.spiderindia.travelinsurance.login.LoginViewModel" />
        
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_enter_username"
                app:errorEnabled="true"
                android:layout_marginTop="20dp"
                app:endIconMode="clear_text"
                app:errorTextColor="#330615"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@drawable/bg_login_field"
                app:errorText="@{viewModel.errorUser}"
                app:layout_constraintTop_toBottomOf="@+id/ivLogo">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lexend_medium"
                    android:text="@={viewModel.liveUser.username}"/>


            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:errorEnabled="true"
                android:layout_marginTop="10dp"
                app:endIconMode="clear_text"
                app:errorTextColor="#330615"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@drawable/bg_login_field"
                app:boxBackgroundMode="outline"
                app:errorText="@{viewModel.errorPassword}"
                app:layout_constraintTop_toBottomOf="@+id/tilUsername">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lexend_medium"
                    android:text="@={viewModel.liveUser.password}"/>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/rbFingerPrint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/enable_fingerprint"
                android:fontFamily="@font/lexend_regular"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:checked="@{viewModel.isFingerPrintEnabled}"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn"
                android:layout_margin="20dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/signin"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/rbFingerPrint"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</layout>
